changes to fix visiblePage

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     url("assets/fonts/gamer.svg") format("svg");
 }
 
-.ranking {
+#ranking {
   width: 15vw;
   height: 96vh;
   position: fixed;
@@ -22,7 +22,7 @@
   background-color: #011133;
   margin: 2vh 1vw 2vh 1vw;
 }
-.ranking h2 {
+#ranking h2 {
   font-family: "gamer", sans-serif;
   font-size: 50px;
   -webkit-text-fill-color: #d95204;
@@ -158,7 +158,7 @@
   background-repeat: no-repeat;
   transform: rotate(55deg);
 }
-#score h1 {
+.score h1 {
   font-family: "gamer", sans-serif;
   font-size: 150px;
   -webkit-text-fill-color: #f2a516;
@@ -191,15 +191,15 @@
 }
 
 @media screen and (max-width: 1500px) {
-  #score h1 {
+  .score h1 {
     font-size: 140px;
     padding: 0px;
   }
-  #score h3 {
+  .score h3 {
     font-size: 80px;
     padding: 0px;
   }
-  #score p {
+  .score p {
     padding: 5px;
   }
   .playAgain {
@@ -257,7 +257,7 @@
 }
 
 @media screen and (max-width: 360px) {
-  .ranking {
+  #ranking {
     width: 98vw;
     height: 50vh;
     position: relative;
@@ -277,4 +277,5 @@
 }
 
 .non-visible {
-  display: none }
+  display: none;
+}
